--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -18,12 +18,12 @@
             <video class="w-100 rounded" autoplay loop muted disablepictureinpicture playsinline controls poster="/proxy/i.pximg.net/img-master/img/2023/04/23/13/55/59/107442519_master1200.jpg" src="/proxy/ugoira.com/107442519">Unable to load ugoira.</video>
           </div>
           <div class="col-6">
-            <a href="/artworks/107442519" class="text-decoration-none">
+            <a href="/artworks/107442519" alt="Artwork link" class="text-decoration-none">
               <figure>
                 <blockquote class="blockquote">
                   <p>くるくる〜くるくるりん</p>
                 </blockquote>
-                <figcaption class="blockquote-footer">Herta, <cite title="Source Title">#83 of the Genius Society</cite></figcaption>
+                <figcaption class="blockquote-footer text-body-secondary">Herta, <cite title="Source Title">#83 of the Genius Society</cite></figcaption>
               </figure>
             </a>
           </div>
@@ -31,58 +31,43 @@
       </div>
 
       <div class="col-12 col-lg-6">
-        <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
-          <h2 class="mb-4">Server Information</h2>
+        <div class="custom-card bg-charcoal-surface1 p-4 mb-4">
+          <h2>Server Information</h2>
           <div class="list-group list-group-flush">
-            <div class="list-group-item bg-body-tertiary pt-0 pb-3 px-0">
+            <div class="list-group-item bg-charcoal-surface1 pt-0 pb-3 px-0">
               <!-- Spacing between the icon + h3 element and the templated in value -->
-              <div class="mb-2">
-                <i class="bi bi-tag me-2"></i>
-                <h3 class="h6 fw-bold d-inline">Version</h3>
-              </div>
+              <h3><i class="bi bi-tag me-2"></i>Version</h3>
               <!-- Larger spacing between the templated in value and description -->
-              <p class="mb-3"><code class="bg-dark-subtle rounded p-1">{{ .Version }}</code></p>
+              <p><code class="bg-dark-subtle rounded p-1">{{ .Version }}</code></p>
               <p class="text-muted mb-0">The current version of PixivFE running on this server</p>
             </div>
 
             {{- if .Revision != "" }}
-            <div class="list-group-item bg-body-tertiary py-3 px-0">
-              <div class="mb-2">
-                <i class="bi bi-git me-2"></i>
-                <h3 class="h6 fw-bold d-inline">Revision</h3>
-              </div>
+            <div class="list-group-item bg-charcoal-surface1 py-3 px-0">
+              <h3><i class="bi bi-git me-2"></i>Revision</h3>
               <!-- .text-reset causes the text color to be inherited from its parent; the underline decoration is preserved -->
-              <p class="mb-3">
+              <p>
                 <code class="bg-dark-subtle rounded p-1"><a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}" class="text-reset">{{ .Revision }}</a></code>
               </p>
               <p class="text-muted mb-0">The specific revision of PixivFE source code in use</p>
             </div>
             {{- end }}
 
-            <div class="list-group-item bg-body-tertiary py-3 px-0">
-              <div class="mb-2">
-                <i class="bi bi-clock me-2"></i>
-                <h3 class="h6 fw-bold d-inline">Server start time (UTC)</h3>
-              </div>
-              <p class="mb-3"><code class="bg-dark-subtle rounded p-1">{{ .Time }}</code></p>
+            <div class="list-group-item bg-charcoal-surface1 py-3 px-0">
+              <h3><i class="bi bi-clock me-2"></i>Server start time (UTC)</h3>
+              <p><code class="bg-dark-subtle rounded p-1">{{ .Time }}</code></p>
               <p class="text-muted mb-0">The date and time when PixivFE was last started on this server</p>
             </div>
 
-            <div class="list-group-item bg-body-tertiary py-3 px-0">
-              <div class="mb-2">
-                <i class="bi bi-image me-2"></i>
-                <h3 class="h6 fw-bold d-inline">Default image proxy server</h3>
-              </div>
-              <p class="mb-3"><code class="bg-dark-subtle rounded p-1">{{ .ImageProxy }}</code></p>
+            <div class="list-group-item bg-charcoal-surface1 py-3 px-0">
+              <h3><i class="bi bi-image me-2"></i>Default image proxy server</h3>
+              <p><code class="bg-dark-subtle rounded p-1">{{ .ImageProxy }}</code></p>
               <p class="text-muted mb-0">The image proxy server used to retrieve images from i.pximg.net</p>
             </div>
 
-            <div class="list-group-item bg-body-tertiary pt-3 pb-0 px-0">
-              <div class="mb-2">
-                <i class="bi bi-globe me-2"></i>
-                <h3 class="h6 fw-bold d-inline">Accept-Language header</h3>
-              </div>
-              <p class="mb-3"><code class="bg-dark-subtle rounded p-1">{{ .AcceptLanguage }}</code></p>
+            <div class="list-group-item bg-charcoal-surface1 pt-3 pb-0 px-0">
+              <h3><i class="bi bi-globe me-2"></i>Accept-Language header</h3>
+              <p><code class="bg-dark-subtle rounded p-1">{{ .AcceptLanguage }}</code></p>
               <p class="text-muted mb-0">The preferred natural language and locale when making requests to the Pixiv API</p>
             </div>
           </div>
