--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -53,16 +53,16 @@
   {{- end }}
 </head>
 
-<body>
+<body class="bg-black">
   <!-- mb-4 for spacing between the navbar and main content -->
-  <nav class="navbar bg-body-tertiary mb-4">
+  <nav class="navbar bg-charcoal-surface1 mb-4">
     <div class="container-fluid justify-content-between">
         <div class="d-flex align-items-center">
           <!-- Offcanvas menu for navigation items -->
           <button class="navbar-toggler border-0 me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas offcanvas-start bg-charcoal-surface1 border-0" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header d-flex align-items-start">
                 <div class="d-flex flex-column w-75">
                   <!-- TODO: fw-bold for the title? can't decide -->
