--- a/assets/views/diagnostics.jet.html
+++ b/assets/views/diagnostics.jet.html
@@ -1,9 +1,20 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container">
-    <p>Tip: Refresh page to see updated data. <a href="/diagnostics/reset">Reset Data</a></p>
-    <div id="vis" style="display: block; height: 100vh;"></div>
+<div class="row justify-content-center g-4">
+  <h1 class="text-center">Diagnostics</h1>
+  <div class="col-9">
+    <div class="alert alert-info" role="alert">
+      <p class="text-center mb-0">
+        <span class="fw-bold">Tip:</span> Refresh page to see updated data. <a href="/diagnostics/reset">Reset Data</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-9">
+    <div class="d-block vh-100" id="vis"></div>
+  </div>
 </div>
+
 <script type="text/javascript" src="/js/vega@5.30.0.js"></script>
 <script type="text/javascript" src="/js/vega-lite@5.21.0.js"></script>
 <script type="text/javascript" src="/js/vega-embed@6.26.0.js"></script>
