--- a/assets/views/fragments/ranking-tn.jet.html
+++ b/assets/views/fragments/ranking-tn.jet.html
@@ -1,7 +1,7 @@
 {{- range . }}
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 <div class="col">
-  <div class="card h-100 border-0">
+  <div class="card h-100 border-0 bg-black">
     {{- include "thumbnail-dt" }}
     <div class="card-body py-2 px-0">
       {{- include "thumbnail-tt" }}
